--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <title>fall2025portfolio</title>
+    <title>Holland Blumer</title>
   </head>
   <body>
     <div id="root"></div>
